XWIKI-10817: Layout issues with the Flamingo skin on Statistics

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/misc.less
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/misc.less
@@ -339,3 +339,28 @@
     display: none; /* Hide the arrow for small resolutions */
   }
 }
+
+// Panels Layout --------------------------------------------------------------
+/* Content Panels are defined in macros.vm in #displayPanelLayout and used in applications like Statistics */
+
+.panellayoutcol {
+  .panellayoutcontainer-1col &, .panellayoutcontainer-2col &, .panellayoutcontainer-3col &, .panellayoutcontainer-4col & {
+    .make-xs-column(12);
+    & .xwikipanelcontents {
+      overflow: auto;
+    }
+  }
+  .panellayoutcontainer-2col & {
+    .make-sm-column(6);
+  }
+  .panellayoutcontainer-3col & {
+    .make-sm-column(4);
+  }
+  .panellayoutcontainer-4col & {
+    .make-sm-column(3);
+  }
+}
+
+.panellayoutcontainer-1col, .panellayoutcontainer-2col, .panellayoutcontainer-3col, .panellayoutcontainer-4col {
+  .clearfix();
+}
